changed the bio in about.md file

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   name             : "Yasaman Yousefi Sigari"
   pronouns         : "she/her"  
   bio              : "PostDoctoral Researcher"
-  location         : "BC,CA"
+  location         : "BC"
   employer         : "TRIUMF"
   uri              : # URL
   email            : "yysigari@gmail.com" 
